--- a/practice.html
+++ b/practice.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>$Title$</title>
-  <script src="AdventOfCode/adventOfCodeSix.js"></script>
+  <script src="AdventOfCode/AOCDay10.js"></script>
 </head>
 <body>
 $END$
