adding work on advent of code exercise 13

--- a/practice.html
+++ b/practice.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>$Title$</title>
-  <script src="AdventOfCode/AOCDay11.js"></script>
+<!--  <script src="AdventOfCode/practice.js"></script>-->
+
 </head>
 <body>
-$END$
+<section class="sky">
+  <div class="color"><p>#F5624D</p></div>
+</section>
+
+<script src="AdventOfCode/AOCDay13.js"></script>
 </body>
 </html>
