adding codewars problem

--- a/practice.html
+++ b/practice.html
@@ -11,6 +11,6 @@
   <div class="color"><p>#F5624D</p></div>
 </section>
 
-<script src="AdventOfCode/AOCDay18.js"></script>
+<script src="JS/codeWars.js"></script>
 </body>
 </html>
